--- a/responzivny web/1-stlpcovy-layout-webu-responzivny-layout-webu-opakovanie.html
+++ b/responzivny web/1-stlpcovy-layout-webu-responzivny-layout-webu-opakovanie.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <title>Jednosĺpcový respozivny layout webu - opakovanie</title>
-    <link rel="stylesheet" href="css/responzivny-template.css">
-    <link rel="stylesheet" href="css/media.css">
+    <link href="css/responzivny-template.css" rel="stylesheet">
+    <link href="css/media.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
 </head>
