--- a/sobota-uloha/sobota-index.html
+++ b/sobota-uloha/sobota-index.html
@@ -1,25 +1,95 @@
 <!DOCTYPE html>
 <html lang="sk">
 <head>
-    <meta charset="UTF-8">
-    <meta content="width=device-width, initial-scale=1" name="viewport">
-      <link rel="stylesheet" href="css/style.css">
-      <link rel="stylesheet" href="css/media.css">
-      <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <title>Moje portfólio</title>
-      <script src="js/script.js"></script>
+  <meta charset="UTF-8">
+  <meta content="width=device-width, initial-scale=1" name="viewport">
+  <link href="css/style.css" rel="stylesheet">
+  <link href="css/media.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+  <title>Moje portfólio</title>
+  <script src="js/script.js"></script>
 </head>
 <body>
-<header class="hlavicka">
-  <div class="topnav" id="myTopnav">
-    <a href="#home">Domov</a>
-    <a href="#news">Portfólio</a>
-    <a href="#about">O Nás</a>
-    <a href="#contact">Kontakt</a>
-    <a class="icon" href="javascript:void(0);" onclick="myFunction()">
-      <i class="fa fa-bars"></i>
-    </a>
+  <!--Domov !!!-->
+  <header class="hlavny obrazok">
+  </header>
+  <!--Nav bar fixed !!!-->
+  <!--TODO Urobiť fixný nav bar s animáciou-->
+  <div class="navbar">
+    <!--TODO Pridať logo vycentovane na ľavo + presmerovanie na domov-->
+    <a href="#domov">Domov</a>
+    <a href="#galeria">Portfolio</a>
+    <a href="#o-mne">O Mne</a>
+    <a href="#kontakt">Kontakt</a>
+    <!--TODO Pridať social media buttoms-->
   </div>
-</header>
+  <!--Portfolio !!!-->
+  <div class="main">
+    <div class="galeria">
+      <div class="prva-cast">
+        <div class="prva-uroven-1">
+          Prva ftoka
+        </div>
+        <div class="druha-uroven-1">
+          druha fotka
+        </div>
+        <div class="tretia-uroven-1">
+          ptretia fotka
+        </div>
+      </div>
+      <div class="druha-cast">
+        <div class="prva-uroven-2">
+          Prva ftoka
+        </div>
+        <div class="druha-uroven-2">
+          druha fotka
+        </div>
+        <div class="tretia-uroven-2">
+          ptretia fotka
+        </div>
+      </div>
+    </div>
+    <!--O Mne !!!-->
+    <div class="o-mne">
+      <div class="zivotopis">
+        <div class="fotka">
+        </div>
+        <div class="popis">
+        </div>
+      </div>
+      <div class="skusenosti">
+      </div>
+    </div>
+    <!--Kontakt !!!-->
+    <div class="kontakt">
+      <div class="kontaktujte-ma">
+        <div class="cislo">
+        </div>
+        <div class="e-mail">
+        </div>
+        <div class="adresa">
+        </div>
+      </div>
+      <div class="kontaktujte-formular">
+        <div class="meno-form">
+        </div>
+        <div class="priezvisko-form">
+        </div>
+        <div class="e-mail-form">
+        </div>
+        <div class="text">
+        </div>
+        <div class="odoslať">
+        </div>
+      </div>
+    </div>
+    <!--Footer !!!-->
+    <footer>
+      <div class="google-maps">
+      </div>
+      <div class="social-media-bottoms">
+      </div>
+    </footer>
+  </div>
 </body>
 </html>
