--- a/sobota-uloha/sobota-index.html
+++ b/sobota-uloha/sobota-index.html
@@ -13,7 +13,7 @@
 <body>
   <!--Nav bar fixed !!!-->
   <div class="navbar">
-    <a href="#domov"><img src="image/Asset%208-8.png" alt="logo" class="logo"></a>
+    <a href="#domov"><img src="image/asset8-8.png" alt="logo" class="logo"></a>
     <a class="nav" href="#domov">Domov</a>
     <a class="nav" href="#galeria">Portfolio</a>
     <a class="nav" href="#o-mne">O mne</a>
@@ -32,18 +32,18 @@
           <img class="gallery" src="image/chivaspromo_portfoli_02.webp" alt="Chivas Regal promo">
         </div>
         <div class="druha-uroven-1">
-          <img class="gallery1" src="image/GTnight_portfoli_03.webp" alt="Gin tonic night">
+          <img class="gallery1" src="image/gtnight_portfoli_03.webp" alt="Gin tonic night">
         </div>
         <div class="tretia-uroven-1">
-          <img class="gallery" src="image/Halloween_portfoli_02.webp" alt="Halloween cocktail">
+          <img class="gallery" src="image/halloween_portfoli_02.webp" alt="Halloween cocktail">
         </div>
       </div>
       <div class="druha-cast">
         <div class="prva-uroven-2">
-          <img class="gallery" src="image/JP_bussines.webp" alt="Portretna fotka">
+          <img class="gallery" src="image/jp-bussines.webp" alt="Portretna fotka">
         </div>
         <div class="druha-uroven-2">
-          <img class="gallery" src="image/JP_golf-03.webp" alt="Golf Variant">
+          <img class="gallery" src="image/jp_golf-03.webp" alt="Golf Variant">
         </div>
         <div class="tretia-uroven-2">
           <img class="gallery" src="image/menu_portfoli_04.webp" alt="Gimlet fruit">
@@ -121,7 +121,7 @@
       <footer>
         <div class="rychle-odkazy">
             <div class="logo2">
-          <a href="#domov"><img class="logo-rychle" src="image/Asset%208-8.png" alt="logo" class="logo"></a>
+          <a href="#domov"><img src="image/asset8-8.png" alt="logo" class="logo2"></a>
             </div>
             <div class="rychlerychle">
           <a class="nav2" href="#galeria">Portfolio</a>
