--- a/plne-responzivny-web/index.html
+++ b/plne-responzivny-web/index.html
@@ -4,15 +4,21 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>JP GENERATION</title>
-    <script src="js/script.js"></script>
     <link rel="icon" type="image/x-icon" href="image/asset-8-8.png">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/media.css" rel="stylesheet">
     <link href="css/keyframe.css" rel="stylesheet">
+    <link href="css/fontface.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com" rel="preconnect">
+    <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
+    <link href="https://fonts.googleapis.com" rel="preconnect">
+    <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+          rel="stylesheet">
 </head>
 <body>
-<header class="nav-background">
+<section class="nav-background">
     <div class="topnav" id="myTopnav">
         <a href="#logo">
             <img alt="JP GENERATION logo" src="image/asset-8-8.png">
@@ -39,8 +45,8 @@
         <!--TODO Mobile menu logo -->
         <!--TODO slider na header fotku a ine fotky-->
     </div>
-    <img alt="GT night malfy gin" class="malfy" src="image/menu_portfoli_06.webp">
-</header>
+    <!--<img alt="GT night malfy gin" class="malfy" src="image/menu_portfoli_06.webp">-->
+</section>
 <!--TODO Sroll buttom up -->
 <!--TODO Gallery with filer and gallery prewiev and sroll on image popis-->
 
@@ -62,13 +68,40 @@
 <!--TODO 404 PAGE NOT FOUND STYLE-->
 
 <!--TODO Footer s rychlymi odkazmi + logo + social media + copyright-->
+<section class="slider">
+    <h2>Automatic Slideshow</h2>
+    <p>Change image every 2 seconds:</p>
 
+    <div class="slideshow-container">
 
-<section>
-<div style="padding-left:16px">
-    <h2>Responsive Topnav Example</h2>
-    <p>Resize the browser window to see how it works.</p>
-</div>
+        <div class="mySlides fade">
+            <div class="numbertext">1 / 3</div>
+            <img src="image/menu_portfoli_06.webp" style="width:100%">
+            <div class="text">Caption Text</div>
+        </div>
+
+        <div class="mySlides fade">
+            <div class="numbertext">2 / 3</div>
+            <img src="image/menu_portfoli_06.webp" style="width:100%">
+            <div class="text">Caption Two</div>
+        </div>
+
+        <div class="mySlides fade">
+            <div class="numbertext">3 / 3</div>
+            <img src="image/menu_portfoli_06.webp" style="width:100%">
+            <div class="text">Caption Three</div>
+        </div>
+
+    </div>
+    <br>
+
+    <div style="text-align:center">
+        <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+    </div>
 </section>
+<script src="js/slider-script.js" type="text/javascript"></script>
+<script src="js/nav-script.js" type="text/javascript"></script>
 </body>
 </html>
