JP GENERATION - BACKUP

--- a/plne-responzivny-web/index.html
+++ b/plne-responzivny-web/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>JP GENERATION</title>
-    <link rel="icon" type="image/x-icon" href="image/asset-8-8.png">
+    <link href="image/asset-8-8.png" rel="icon" type="image/x-icon">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/media.css" rel="stylesheet">
@@ -13,67 +13,68 @@
     <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
     <link href="https://fonts.googleapis.com" rel="preconnect">
     <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+          rel="stylesheet">
 </head>
 <body>
-    <section class="nav-background">
-        <div class="topnav" id="myTopnav">
-            <a href="#logo">
-                <img alt="JP GENERATION logo" src="image/asset-8-8.png">
-            </a>
-            <a class="icon" href="javascript:void(0);" onclick="myFunction()">
-                <i class="fa fa-bars"></i>
-            </a>
-            <a href="#home">Domov</a>
-            <div class="dropdown">
-                <button class="dropbtn">Portfólio
-                    <i class="fa fa-caret-down"></i>
-                </button>
-                <div class="dropdown-content">
-                    <a href="#photo">Fotky</a>
-                    <a href="#video">Video</a>
-                </div>
+<section class="nav-background">
+    <div class="topnav" id="myTopnav">
+        <a href="#logo">
+            <img alt="JP GENERATION logo" src="image/asset-8-8.png">
+        </a>
+        <a class="icon" href="javascript:void(0);" onclick="myFunction()">
+            <i class="fa fa-bars"></i>
+        </a>
+        <a href="#home">Domov</a>
+        <div class="dropdown">
+            <button class="dropbtn">Portfólio
+                <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-content">
+                <a href="#photo">Fotky</a>
+                <a href="#video">Video</a>
             </div>
-            <div class="dropdown">
-                <button class="dropbtn">Služby
-                    <i class="fa fa-caret-down"></i>
-                </button>
-                <div class="dropdown-content">
-                    <a href="#ser-photo-prod">Foto produkcia</a>
-                    <a href="#ser-video-prod">Video produkcia</a>
-                    <a href="#ser-graph-des">Graficky dizajn</a>
-                    <a href="#ser-news-lett">Newsletter reklama</a>
-                    <a href="#ser-admin-dom-hos">Správa domeny a hostingu</a>
-                    <a href="#ser-word-web">Wordpres web</a>
-                    <a href="#ser-soc-med">Sociálne média</a>
-                </div>
-            </div>
-            <div class="dropdown">
-                <button class="dropbtn">Cenník
-                    <i class="fa fa-caret-down"></i>
-                </button>
-                <div class="dropdown-content">
-                    <a href="#price-photo-prod">Foto produkcia</a>
-                    <a href="#price-video-prod">Video produkcia</a>
-                    <a href="#price-graph-des">Graficky dizajn</a>
-                    <a href="#price-news-lett">Newsletter reklama</a>
-                    <a href="#price-admin-dom-hos">Správa domeny a hostingu</a>
-                    <a href="#price-word-web">Wordpres web</a>
-                    <a href="#price-soc-med">Sociálne média</a>
-                </div>
-            </div>
-            <div class="dropdown">
-                <button class="dropbtn">O nás
-                    <i class="fa fa-caret-down"></i>
-                </button>
-                <div class="dropdown-content">
-                    <a href="#about-us">Kto vlastne sme</a>
-                    <a href="#customers">Zákaznici</a>
-                </div>
-            </div>
-                    <a href="#contact">Kontakt</a>
         </div>
-    </section>
+        <div class="dropdown">
+            <button class="dropbtn">Služby
+                <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-content">
+                <a href="#ser-photo-prod">Foto produkcia</a>
+                <a href="#ser-video-prod">Video produkcia</a>
+                <a href="#ser-graph-des">Graficky dizajn</a>
+                <a href="#ser-news-lett">Newsletter reklama</a>
+                <a href="#ser-admin-dom-hos">Správa domeny a hostingu</a>
+                <a href="#ser-word-web">Wordpres web</a>
+                <a href="#ser-soc-med">Sociálne média</a>
+            </div>
+        </div>
+        <div class="dropdown">
+            <button class="dropbtn">Cenník
+                <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-content">
+                <a href="#price-photo-prod">Foto produkcia</a>
+                <a href="#price-video-prod">Video produkcia</a>
+                <a href="#price-graph-des">Graficky dizajn</a>
+                <a href="#price-news-lett">Newsletter reklama</a>
+                <a href="#price-admin-dom-hos">Správa domeny a hostingu</a>
+                <a href="#price-word-web">Wordpres web</a>
+                <a href="#price-soc-med">Sociálne média</a>
+            </div>
+        </div>
+        <div class="dropdown">
+            <button class="dropbtn">O nás
+                <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-content">
+                <a href="#about-us">Kto vlastne sme</a>
+                <a href="#customers">Zákaznici</a>
+            </div>
+        </div>
+        <a href="#contact">Kontakt</a>
+    </div>
+</section>
 
 <section class="slider">
     <div class="slideshow-container">
@@ -99,9 +100,9 @@
         <span class="dot"></span>
     </div>
 </section>
-    <script src="js/slider-script.js" type="text/javascript"></script>
-    <script src="js/nav-script.js" type="text/javascript"></script>
-    <script src="js/dropdown-nav-script.js" type="text/javascript"></script>
+<script src="js/slider-script.js" type="text/javascript"></script>
+<script src="js/nav-script.js" type="text/javascript"></script>
+<script src="js/dropdown-nav-script.js" type="text/javascript"></script>
 </body>
 </html>
 <!--TODO slide left full width menu-->
