--- a/plne-responzivny-web/index.html
+++ b/plne-responzivny-web/index.html
@@ -17,10 +17,11 @@
           rel="stylesheet">
 </head>
 <body>
+<!-------------NAV MENU--------------->
 <section class="nav-background">
     <div class="topnav" id="myTopnav">
         <a href="#logo">
-            <img alt="JP GENERATION logo" src="image/asset-8-8.png">
+            <img alt="JP GENERATION logo" id="logo" src="image/asset-8-8.png">
         </a>
         <a class="icon" href="javascript:void(0);" onclick="myFunction()">
             <i class="fa fa-bars"></i>
@@ -28,7 +29,7 @@
         <a href="#home">Domov</a>
         <div class="dropdown">
             <button class="dropbtn">Portfólio
-                <i class="fa fa-caret-down"></i>
+                <i class="fa fa-caret-down" id="arrow1"></i>
             </button>
             <div class="dropdown-content">
                 <a href="#photo">Fotky</a>
@@ -37,7 +38,7 @@
         </div>
         <div class="dropdown">
             <button class="dropbtn">Služby
-                <i class="fa fa-caret-down"></i>
+                <i class="fa fa-caret-down" id="arrow2"></i>
             </button>
             <div class="dropdown-content">
                 <a href="#ser-photo-prod">Foto produkcia</a>
@@ -51,7 +52,7 @@
         </div>
         <div class="dropdown">
             <button class="dropbtn">Cenník
-                <i class="fa fa-caret-down"></i>
+                <i class="fa fa-caret-down" id="arrow3"></i>
             </button>
             <div class="dropdown-content">
                 <a href="#price-photo-prod">Foto produkcia</a>
@@ -65,7 +66,7 @@
         </div>
         <div class="dropdown">
             <button class="dropbtn">O nás
-                <i class="fa fa-caret-down"></i>
+                <i class="fa fa-caret-down" id="arrow4"></i>
             </button>
             <div class="dropdown-content">
                 <a href="#about-us">Kto vlastne sme</a>
@@ -75,7 +76,7 @@
         <a href="#contact">Kontakt</a>
     </div>
 </section>
-
+<!-------------PHOTO SLIDER--------------->
 <section class="slider">
     <div class="slideshow-container">
 
@@ -100,21 +101,136 @@
         <span class="dot"></span>
     </div>
 </section>
+<br>
+<br>
+<!-------------IDEA OF THE COMAPNY--------------->
+<section class="concept">
+    <div class="concept-container">
+        <div>
+            <i aria-hidden="true" class="fa fa-paper-plane-o"></i>
+            <h3>Koncept budúcnosti</h3>
+            <div class="line"></div>
+            <p>Koncept na mieru ktorý kráča s digitálnou dobou…</p>
+        </div>
+        <div>
+            <i aria-hidden="true" class="fa fa-globe"></i>
+            <h3>Veľké nápady</h3>
+            <div class="line"></div>
+            <p>Netrápte sa s tým že nemáte predstavu ako by to malo vyzerať. Vymyslime to za Vás…</p>
+        </div>
+        <div>
+            <i aria-hidden="true" class="fa fa-lightbulb-o"></i>
+            <h3>Kreatívne riešenia</h3>
+            <div class="line"></div>
+            <p>Veľké nápady si žiadajú kreatívne riešenia ktoré Vám poskytneme…</p>
+        </div>
+    </div>
+</section>
+<br>
+<br>
+<!-------------SERVICICES-------------->
+<section class="services">
+    <header class="headline">
+        <div>
+            <div class="line"></div>
+            <div>
+                <h2>Služby</h2>
+            </div>
+            <div class="spacer"></div>
+        </div>
+        <div>
+            <span>MENŠÍ NÁHĽAD ČO VÁM VIEME POSKYTNÚŤ</span>
+        </div>
+    </header>
+    <section class="content1">
+        <div>
+            <i aria-hidden="true" class="fa fa-area-chart"></i>
+            <h3>Digitálna stratégia</h3>
+            <p>Každá dobra stratégia potrebuje analýzu ktorú Vám poskytneme…</p>
+        </div>
+        <div>
+            <i aria-hidden="true" class="fa fa-pencil-square-o"></i>
+            <h3>Graficky dizajn</h3>
+            <p>Banner, logo, plagát, vizitka, vizualizácia…
+                Všetko čo Vám napadne pod slovo graficky dizajn…</p>
+        </div>
+        <div>
+            <i aria-hidden="true" class="fa fa-envelope"></i>
+            <h3>Newsletter reklama</h3>
+            <p>Potrebujete dostať informácie bližšie ku zákaznikovi? Nechceš aby tvoj mail vyzeral obyčajne?</p>
+        </div>
+    </section>
+    <section class="content2">
+        <div>
+            <i aria-hidden="true" class="fa fa-wordpress"></i>
+            <h3>WordPress web</h3>
+            <p>Vytvoríme Vám web na mieru bez starostí od blogu až po e-shop… </p>
+        </div>
+        <div>
+            <i aria-hidden="true" class="fa fa-server"></i>
+            <h3>Správa domeny a hostingu</h3>
+            <p>Zaberá Vám správa Vášho e-shopu veľa času? Nechatje to na Nás…</p>
+        </div>
+        <div>
+            <i aria-hidden="true" class="fa fa-camera"></i>
+            <h3>Foto produkcia</h3>
+            <p>Profesionálne fotografie pre Váš e-shop, sociálne siete alebo udalosť na ktorú nechcete zabudnúť…</p>
+        </div>
+    </section>
+</section>
+<!-------------PROJEKTY-------------->
+<section class="project">
+    <header class="headline">
+        <div>
+            <div class="line"></div>
+            <div>
+                <h2>Projekty</h2>
+            </div>
+            <div class="spacer"></div>
+        </div>
+        <div>
+            <span>MENŠÍ NÁHĽAD AKO MÔŽE VYZERAŤ AJ VÁŠ PROJEKT</span>
+        </div>
+    </header>
+    <section class="photo-galery">
+        <div class="pro-img-1">
+            <img src="" alt="">
+        </div>
+        <div class="pro-img-2">
+            <img src="" alt="">
+        </div>
+        <div class="pro-img-3">
+            <img src="" alt="">
+        </div>
+        <div class="pro-img-4">
+            <img src="" alt="">
+        </div>
+        <div class="pro-img-5">
+            <img src="" alt="">
+        </div>
+        <div class="pro-img-6">
+            <img src="" alt="">
+        </div>
+    </section>
+</section>
+<!-------------JAVA SCRIPT-------------->
 <script src="js/slider-script.js" type="text/javascript"></script>
 <script src="js/nav-script.js" type="text/javascript"></script>
 <script src="js/dropdown-nav-script.js" type="text/javascript"></script>
 </body>
 </html>
+
+<!-------------TO DO-------------->
 <!--TODO slide left full width menu-->
 <!--TODO animacia navigacneho menu na X-->
 <!--TODO Equal width menu-->
-<!--TODO Nav bar on image-->
 <!--TODO Clik droplist menu in nav an in slide bar -->
 <!--TODO Mobile menu logo -->
 <!--TODO slider na header fotku a ine fotky-->
+<!--TODO LOGO ZAROVNAT pri MOBILE na STRED a PRI PC TROSKA Z LAVA A MENU NA PRAVO-->
 
 <!--TODO Sroll buttom up -->
-<!--TODO Gallery with filer and gallery prewiev and sroll on image popis-->
+<!--TODO Gallery with filer and gallery prewiev and sroll on image popis AKO NA WORDPRESSE-->
 
 <!--TODO zivotopis sticky fotka  -->
 <!--TODO Skill bar v % s animaciou-->
