JP GENERATION - complet HTML - HOME PAGE

--- a/plne-responzivny-web/index.html
+++ b/plne-responzivny-web/index.html
@@ -178,6 +178,8 @@
         </div>
     </section>
 </section>
+<br>
+<br>
 <!-------------PROJEKTY-------------->
 <section class="project">
     <header class="headline">
@@ -213,6 +215,186 @@
         </div>
     </section>
 </section>
+<br>
+<br>
+<!-------------PROJEKTY-------------->
+<section class="project">
+    <div class="skills">
+        <header class="headline">
+            <div>
+                <h2>Tu su nejaké naše zručnosti</h2>
+            </div>
+            <div>
+                <p>Nikto nieje dokonalý preto Vás nebudeme klamať že všetko ovladáme na 100%. Vždy sa da niečo nové
+                    naučiť a ak si myslíte nie znamená to len jedno…</p>
+            </div>
+        </header>
+        <section class="skill-list">
+            <div class="name">
+                <div class="type"><span>Foto produkcia</span></div>
+                <div class="percent">99%</div>
+                <div class="turquise-bar"></div>
+            </div>
+            <div class="name2">
+                <div class="type"><span>Graficky diazjn</span></div>
+                <div class="percent">99%</div>
+                <div class="turquise-bar"></div>
+            </div>
+            <div class="name3">
+                <div class="type"><span>Digitálna stratégia</span></div>
+                <div class="percent">95%</div>
+                <div class="turquise-bar"></div>
+            </div>
+            <div class="name4">
+                <div class="type"><span>WordPress web</span></div>
+                <div class="percent">92%</div>
+                <div class="turquise-bar"></div>
+            </div>
+            <div class="name5">
+                <div class="type"><span>Video produkcia</span></div>
+                <div class="percent">89%</div>
+                <div class="turquise-bar"></div>
+            </div>
+            <div class="name6">
+                <div class="type"><span>Správa domeny alebo hostingu</span></div>
+                <div class="percent">93%</div>
+                <div class="turquise-bar"></div>
+            </div>
+            <div class="name7">
+                <div class="type"><span>Newsletter reklama</span></div>
+                <div class="percent">94%</div>
+                <div class="turquise-bar"></div>
+            </div>
+        </section>
+    </div>
+    <div class="photo-ai">
+        <img alt="" src="">
+    </div>
+</section>
+<br>
+<br>
+<!-------------BIG MIND-------------->
+<section class="mind">
+    <div class="backgr-img">
+        <div class="container">
+            <div>
+                <h2>Máte na mysli niečo veľké?</h2>
+            </div>
+            <div>
+                <button>
+                    <a href="#">Poďme na to!</a>
+                </button>
+            </div>
+        </div>
+    </div>
+</section>
+<br>
+<br>
+<footer>
+    <section class="main">
+        <div class="fot-logo-disc">
+            <div class="fot-logo">
+                <a href="#">
+                    <img alt="logo jp generation" src="image/asset-8-8.png">
+                </a>
+            </div>
+            <div class="slog">
+                <p>My sme digitálna generácia</p>
+            </div>
+            <div class="line">
+
+            </div>
+        </div>
+        <div class="fot-services">
+            <h4>Služby</h4>
+            <div>
+                <div>
+                    <a href="">Foto produkcia</a>
+                </div>
+                <div>
+                    <a href="">Graficky dizajn</a>
+                </div>
+                <div>
+                    <a href="">Digitálna stratégia</a>
+                </div>
+                <div>
+                    <a href="">Cenník</a>
+                </div>
+            </div>
+        </div>
+        <div class="fot-speed">
+            <h4>Rýchle odkazy</h4>
+            <div>
+                <div>
+                    <a href="">Kto vlastne sme</a>
+                </div>
+                <div>
+                    <a href="">Portfólio</a>
+                </div>
+                <div>
+                    <a href="">Zásady ochrany osobných údajov</a>
+                </div>
+                <div>
+                    <a href="">Zásady používania súborov cookie</a>
+                </div>
+            </div>
+        </div>
+        <div class="fot-conta">
+            <h4>Kontakt</h4>
+            <div>
+                <div>
+                    <i aria-hidden="true" class="fa fa-map-marker"></i>
+                    <a href="#">Niekde na platnéte Zem</a>
+                </div>
+                <div>
+                    <i aria-hidden="true" class="fa fa-phone"></i>
+                    <a href="#">+421 907 112 358</a>
+                </div>
+                <div>
+                    <i aria-hidden="true" class="fa fa-envelope-o"></i>
+                    <a href="#">info@jpgeneration.sk</a>
+                </div>
+
+            </div>
+        </div>
+    </section>
+    <section class="spacer">
+        <div class="line">
+            <!--PRITAĎ ČIATU !!!-->
+        </div>
+    </section>
+    <section class="soc-icon">
+        <div>
+            <div class="instagram">
+                <a href="#">
+                    <i aria-hidden="true" class="fa fa-instagram"></i>
+                </a>
+            </div>
+            <div class="facebook">
+                <a href="#">
+                    <i aria-hidden="true" class="fa fa-facebook-square"></i>
+                </a>
+            </div>
+            <div class="youtube">
+                <a href="#">
+                    <i aria-hidden="true" class="fa fa-youtube-play"></i>
+                </a>
+            </div>
+            <div class="e-mail">
+                <a href="#">
+                    <i aria-hidden="true" class="fa fa-envelope-o"></i>
+                </a>
+            </div>
+        </div>
+    </section>
+    <section class="copy-write">
+        <div>
+            <p>Copyright © 2023. All rights reserved.</p>
+        </div>
+    </section>
+</footer>
+<br>
+<br>
 <!-------------JAVA SCRIPT-------------->
 <script src="js/slider-script.js" type="text/javascript"></script>
 <script src="js/nav-script.js" type="text/javascript"></script>
