JP GENERATION - complet HTML - HOME PAGE

--- a/plne-responzivny-web/index.html
+++ b/plne-responzivny-web/index.html
@@ -128,7 +128,7 @@
 </section>
 <br>
 <br>
-<!-------------SERVICICES-------------->
+<!-------------SERVICES-------------->
 <section class="services">
     <header class="headline">
         <div>
@@ -180,7 +180,7 @@
 </section>
 <br>
 <br>
-<!-------------PROJEKTY-------------->
+<!-------------PROJECT-------------->
 <section class="project">
     <header class="headline">
         <div>
@@ -217,8 +217,8 @@
 </section>
 <br>
 <br>
-<!-------------PROJEKTY-------------->
-<section class="project">
+<!-------------SKILL LIST-------------->
+<section class="abilites">
     <div class="skills">
         <header class="headline">
             <div>
